--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:500,600,700,100,800,900,400,200,300);
+@import url(https://fonts.googleapis.com/css?family=Raleway:500,600,700,100,800,900,400,200,300);
 
 body, html {
     font-family: 'Raleway', sans-serif;
