--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,7 @@ html(lang='en')
 
     script(type='text/javascript', src='/js/modernizr.custom.js')
 
-    link(href='http://fonts.googleapis.com/css?family=Raleway:500,600,700,100,800,900,400,200,300', rel='stylesheet', type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Raleway:500,600,700,100,800,900,400,200,300', rel='stylesheet', type='text/css')
   body
     #wrap
       #main
