--- a/views/error.pug
+++ b/views/error.pug
@@ -8,4 +8,5 @@ block content
           h3.text-center= message
         .space
           h4= error.status
-          pre #{error.stack}
+          if(debug)
+            pre #{error.stack}
