--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang='en')
 
     meta(name='description', content='Lista de los mejores servidores de Minecraft de Habla Hispana')
     meta(name='keywords', content='Minecraft, Servers, Servidores, Premium, No Premium')
-    meta(name='author', content='KernelFreeze')
+    meta(name='author', content='https://twitter.com/Servidores__MC')
 
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
 
