--- a/views/server.pug
+++ b/views/server.pug
@@ -13,7 +13,7 @@ block content
             .alert.alert-dismissable.alert-warning
                 a.close(href='#', data-dismiss='alert', aria-label='close') &times;
                 | Este servidor fue añadido de forma automática, si te pertenece y deseas cambiar los datos, avísanos en nuestro
-                a(href='https://twitter.com/KernelFreeze')  Twitter
+                a(href='https://twitter.com/Servidores__MC')  Twitter
         .row
             .col-sm-6.col-md-4
                 .thumbnail
