--- a/views/layout.pug
+++ b/views/layout.pug
@@ -96,6 +96,16 @@ html(lang='en')
             |  ¡Hecho con&nbsp;
             i.glyphicon.glyphicon-heart-empty.text-danger(aria-hidden='true')
             |  y mucho esfuerzo!
+          p
+            a(href='https://twitter.com/Servidores__MC')
+              i.fa.fa-twitter(aria-hidden='true')
+              |  Twitter&emsp;
+            a(href='/tos')
+              i.fa.fa-gavel(aria-hidden='true')
+              |  Términos del servicio&emsp;
+            a(href='/tos')
+              i.fa.fa-user-secret(aria-hidden='true')
+              |  Política de privacidad&emsp;
 
     // JS
     script(type='text/javascript', src='/js/jquery.min.js')
