Mejor usar CSS...

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -99,13 +99,13 @@ html(lang='en')
           p
             a(href='https://twitter.com/Servidores__MC')
               i.fa.fa-twitter(aria-hidden='true')
-              |  Twitter&emsp;
+              |  Twitter
             a(href='/tos')
               i.fa.fa-gavel(aria-hidden='true')
-              |  Términos del servicio&emsp;
+              |  Términos del servicio
             a(href='/tos')
               i.fa.fa-user-secret(aria-hidden='true')
-              |  Política de privacidad&emsp;
+              |  Política de privacidad
 
     // JS
     script(type='text/javascript', src='/js/jquery.min.js')
