--- a/views/layout.pug
+++ b/views/layout.pug
@@ -71,7 +71,7 @@ html(lang='en')
                             a(href='/logout')
                               i.fa.fa-sign-out(aria-hidden='true')
                               |  Cerrar sesión
-                  form.navbar-form.navbar-right(action='search', method='post')
+                  form.navbar-form.navbar-right(action='/search', method='post')
                     .input-group
                       input.form-control(type='text', name='search', placeholder='Buscar...')
                       .input-group-btn
