--- a/views/index.pug
+++ b/views/index.pug
@@ -11,69 +11,108 @@ block head
           |  ¡Comenzar!
 
 block content
-  #destacados.space
-  .container
-    .section-title
-      h1.text-center Destacados
-      hr
-    .row
-      .col-md-8.col-md-offset-2
-        table.table.table-striped
-          thead
-            tr
-              th
-              th Servidor
-              th IP
-              th Jugadores
-              th Tipo
-              th
-                i.glyphicon.glyphicon-heart-empty(aria-hidden='true')
-          tbody
-            each server in servers
+  #destacados.space(style="padding-top: 200px; margin-top: -200px;")
+    if(top && top.length > 0)
+      .container
+        .section-title
+          h1.text-center Recomendados
+          hr
+        .row
+          .col-md-8.col-md-offset-2
+            table.table.table-striped
+              thead
+                tr
+                  th
+                  th Servidor
+                  th IP
+                  th Jugadores
+                  th Tipo
+                  th
+                    i.glyphicon.glyphicon-heart-empty(aria-hidden='true')
+              tbody
+                each server in top
+                  tr
+                    td: a(href='/server/' + server._id): img.img-thumbnail(src=server.icon, style='width: 100%; max-width: 64px; max-height: 64px; display: block')
+                    td: a(href='/server/' + server._id) #{server.name}
+                    td
+                      a.copy(data-toggle="popover", data-placement="top", data-content="¡Copiado!", ip=server.fullip, href='#')
+                        | #{server.fullip}&nbsp;
+                        i.fa.fa-clone.text-info(aria-hidden='true')
+                    td
+                      | #{server.players}
+                      i.text-muted /
+                      | #{server.max}
+                    if server.type === 2
+                      td.text-danger: b Solo premium
+                    else if server.type === 1
+                      td.text-warning: b Semi-premium
+                    else
+                      td.text-success: b No premium
+                    td
+                      | #{server.likes || 0}&nbsp;
+                      i.fa.fa-heart.text-danger(aria-hidden='true')
+    .container
+      .section-title
+        h1.text-center Destacados
+        hr
+      .row
+        .col-md-8.col-md-offset-2
+          table.table.table-striped
+            thead
               tr
-                td: a(href='/server/' + server._id): img.img-thumbnail(src=server.icon, style='width: 100%; max-width: 64px; max-height: 64px; display: block')
-                td: a(href='/server/' + server._id) #{server.name}
-                td
-                  a.copy(data-toggle="popover", data-placement="top", data-content="¡Copiado!", ip=server.fullip, href='#')
-                    | #{server.fullip}&nbsp;
-                    i.fa.fa-clone.text-info(aria-hidden='true')
-                td
-                  | #{server.players}
-                  i.text-muted /
-                  | #{server.max}
-                if server.type === 2
-                  td.text-danger: b Solo premium
-                else if server.type === 1
-                  td.text-warning: b Semi-premium
-                else
-                  td.text-success: b No premium
-                td
-                  | #{server.likes || 0}&nbsp;
-                  i.fa.fa-heart.text-danger(aria-hidden='true')
-
-        .text-center
-          nav(aria-label='Page navigation')
-            ul.pagination
-              if(pagination.page <= 1)
-                li.disabled
-                  a(aria-label='Previous')
-                    span(aria-hidden='true') «
-              else
-                li
-                  a(href='/' + (pagination.page - 1), aria-label='Previous')
-                    span(aria-hidden='true') «
-              - for(var i = 1; i <= pagination.pages; i++)
-                  if(i === pagination.page)
-                    li.active
-                      a(href='#') #{i}
+                th
+                th Servidor
+                th IP
+                th Jugadores
+                th Tipo
+                th
+                  i.glyphicon.glyphicon-heart-empty(aria-hidden='true')
+            tbody
+              each server in servers
+                tr
+                  td: a(href='/server/' + server._id): img.img-thumbnail(src=server.icon, style='width: 100%; max-width: 64px; max-height: 64px; display: block')
+                  td: a(href='/server/' + server._id) #{server.name}
+                  td
+                    a.copy(data-toggle="popover", data-placement="top", data-content="¡Copiado!", ip=server.fullip, href='#')
+                      | #{server.fullip}&nbsp;
+                      i.fa.fa-clone.text-info(aria-hidden='true')
+                  td
+                    | #{server.players}
+                    i.text-muted /
+                    | #{server.max}
+                  if server.type === 2
+                    td.text-danger: b Solo premium
+                  else if server.type === 1
+                    td.text-warning: b Semi-premium
                   else
-                    li
-                      a(href='/' + i) #{i}
-              if(pagination.page >= pagination.pages)
-                li.disabled
-                  a(href='#', aria-label='Next')
-                    span(aria-hidden='true') »
-              else
-                li
-                  a(href='/' + (pagination.page + 1), aria-label='Next')
-                    span(aria-hidden='true') »
+                    td.text-success: b No premium
+                  td
+                    | #{server.likes || 0}&nbsp;
+                    i.fa.fa-heart.text-danger(aria-hidden='true')
+
+          .text-center
+            nav(aria-label='Page navigation')
+              ul.pagination
+                if(pagination.page <= 1)
+                  li.disabled
+                    a(aria-label='Previous')
+                      span(aria-hidden='true') «
+                else
+                  li
+                    a(href='/' + (pagination.page - 1), aria-label='Previous')
+                      span(aria-hidden='true') «
+                - for(var i = 1; i <= pagination.pages; i++)
+                    if(i === pagination.page)
+                      li.active
+                        a(href='#') #{i}
+                    else
+                      li
+                        a(href='/' + i) #{i}
+                if(pagination.page >= pagination.pages)
+                  li.disabled
+                    a(href='#', aria-label='Next')
+                      span(aria-hidden='true') »
+                else
+                  li
+                    a(href='/' + (pagination.page + 1), aria-label='Next')
+                      span(aria-hidden='true') »
