--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,13 +1,12 @@
 doctype html
-html(lang='en')
+html(lang='es')
   head
     meta(charset='utf-8')
 
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title #{title} | Servidores Minecraft
 
-    meta(name='description', content='Lista de los mejores servidores de Minecraft de Habla Hispana')
-    meta(name='keywords', content='Minecraft, Servers, Servidores, Premium, No Premium')
+    meta(name='description', content='Los mejores servidores de Minecraft de Habla Hispana, aquí encontraras servidores de todo tipo, ¡Encuentra el más divertido!')
     meta(name='author', content='https://twitter.com/Servidores__MC')
 
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
