--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,7 +256,7 @@ ul.cat.list-inline li a:hover {
 }
 
 #main {
-    overflow:auto;
+    overflow: auto;
     padding-bottom: 50px;
 }
 
@@ -264,8 +264,8 @@ ul.cat.list-inline li a:hover {
     position: relative;
     margin-top: -50px;
     height: 86px;
-    clear:both;
-    padding-top:20px;
+    clear: both;
+    padding-top: 20px;
     background: #222222;
     color: #f1f1f1;
 }
@@ -338,10 +338,18 @@ ul.cat.list-inline li a:hover {
     height: 0;
     padding-bottom: 56.25%;
 }
+
 .video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.img-thumbnail {
+    width: 100%;
+    max-width: 64px;
+    max-height: 64px;
+    display: block
 }
