--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,14 +32,14 @@ html(lang='es')
             nav#tf-menu.navbar.navbar-default
               .container
                 .navbar-header
-                  button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                  button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-collapse')
                     span.sr-only Toggle navigation
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
                   a.navbar-brand(href='/')
                     img(alt='Brand', src='/img/logo.png')
-                .collapse.navbar-collapse
+                .collapse.navbar-collapse#navbar-collapse
                   ul.nav.navbar-nav.navbar-left
                     li
                       a(href='/players')
