--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
     if(top && top.length > 0)
       .container
         .section-title
-          h1.text-center Recomendados
+          h2.text-center Servidores recomendados
           hr
         .row
           .col-md-8.col-md-offset-2
@@ -57,7 +57,7 @@ block content
                         i.fa.fa-heart.text-danger(aria-hidden='true')
     .container
       .section-title
-        h1.text-center Destacados
+        h2.text-center Servidores destacados
         hr
       .row
         .col-md-8.col-md-offset-2
