--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang='es')
     meta(name='description', content='Los mejores servidores de Minecraft de Habla Hispana, aquí encontraras servidores de todo tipo, ¡Encuentra el más divertido!')
     meta(name='author', content='https://twitter.com/Servidores__MC')
 
-    link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
+    link(rel='icon', href='/favicon.ico', type='image/x-icon')
 
     // Bootstrap
     link(rel='stylesheet', type='text/css', href='/css/bootstrap.css')
