--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block javascript
               "@context": "http://schema.org",
               "@type": "WebSite",
               "url": "https://servidoresminecraft.co/",
+              "name": "Servidores de Minecraft",
               "potentialAction": {
                   "@type": "SearchAction",
                   "target": "https://servidoresminecraft.co/search/{query}",
