--- a/views/layout.pug
+++ b/views/layout.pug
@@ -111,3 +111,13 @@ html(lang='es')
     script(type='text/javascript', src="/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
     script(type='text/javascript', src='/js/main.js')
     block javascript
+    script(type="application/ld+json").
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Servidores de Minecraft",
+        "url": "https://servidoresminecraft.co",
+        "sameAs": [
+          "https://twitter.com/Servidores__MC"
+        ]
+      }
