--- a/views/server.pug
+++ b/views/server.pug
@@ -4,7 +4,7 @@ block css
     link(rel='stylesheet', type='text/css', href='/css/bootstrap-tagsinput.css')
 
 block content
-    .container(itemscope, itemtype='http://schema.org/Product')
+    .container(itemscope, itemtype='http://schema.org/Review')
         .section-title
             h3.text-center(itemprop='name') #{server.name}
             hr
@@ -15,13 +15,13 @@ block content
                 | Este servidor fue añadido de forma automática, si te pertenece y deseas cambiar los datos, avísanos en nuestro
                 a(href='https://twitter.com/Servidores__MC')  Twitter
         .row
-            .col-sm-6.col-md-4
+            .col-sm-6.col-md-4(itemprop='itemReviewed', itemscope, itemtype='http://schema.org/Product')
                 .thumbnail
                     img(src='/server/' + server.name + '/img', alt=server.name, itemprop='image')
                 .caption.table-responsive
                     table.table
                         tr
-                            td Dueño
+                            td Añadido por
                             td #{server.owner.displayName}
                         tr
                             td Estado
@@ -63,7 +63,11 @@ block content
             .col-md-6
                 .panel.panel-default
                     .panel-body
-                        p(itemprop='description') !{server.description.replace(/\n/g, '<br>')}
+                        p(itemprop='reviewBody') !{server.description.replace(/\n/g, '<br>')}
+                        p
+                            |-
+                            span(itemprop='author', itemscope='', itemtype='http://schema.org/Person')
+                                span(itemprop='name') #{server.owner.displayName}
                 if(server.youtube)
                     .panel.panel-default
                         .panel-body
